--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        kubectl create deployment $DEPLOYMENT_NAME \
+        kubectl create deployment $DEPLOYMENT_NAME-$GITHUB_SHA \
          --image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
         kubectl rollout status deployment/$DEPLOYMENT_NAME
         kubectl get services -o wide
