--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,5 +53,5 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-        kubectl create deployment $DEPLOYMENT_NAME-$GITHUB_RUN_NUMBER \
-         --image=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
+       kubectl set image deployment/hello-server image=$IMAGE:$GITHUB_SHA
+
