--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,5 +53,5 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
       run: |-
-       kubectl set image deployment/hello-server image=$IMAGE:$GITHUB_SHA
+        kubectl set image deployment/hello-server hello-app=$IMAGE:$GITHUB_SHA
 
