--- a/.github/workflows/k6.yml
+++ b/.github/workflows/k6.yml
@@ -15,5 +15,12 @@ jobs:
         uses: k6io/action@v0.1
         with:
           filename: test.js
-          flags: --out influxdb=http://influx:${{secrets.influx}}@influx.churcher.me:8086/
+          flags: --out influxdb=http://influx:${{secrets.influx}}@influx.churcher.me:8086/ --out json=results.json
+          
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: k6-results
+          path: results.json
+          retention-days: 7
           
