--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on: push
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GKE_CLUSTER: autopilot-cluster-1    # Add your cluster name here.
-  GKE_ZONE: europe-west2-a   # Add your cluster zone here.
+  GKE_ZONE: europe-west2   # Add your cluster zone here.
   DEPLOYMENT_NAME: hello-app # Add your deployment name here.
   IMAGE: hello-world
 
