--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,5 +54,5 @@ jobs:
     - name: Deploy
       run: |-
         echo using gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA && 
-        kubectl set image deployment/hello-server hello-app=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
+        kubectl set image deployment/${{env.DEPLOYMENT_NAME}} hello-app=gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA
 
