--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,8 +62,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
+    - name: Checkout
+      uses: actions/checkout@v2
+    
     - name: Run local k6 test
       uses: k6io/action@v0.1
       with:
         filename: test.js
-        flags: --out influxdb=http://influx:${{secrets.influx}}@influx.churcher.me:8086/ --out json=/tmp/results.json
+        flags: --out influxdb=http://influx:${{secrets.influx}}@influx.churcher.me:8086/
