--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,9 +1,7 @@
 name: Nightly Load Test
 
 on:
-  schedule:
-    # * is a special character in YAML, so you have to quote this string
-    - cron: '0 0 * * *'
+  workflow_dispatch
 
 jobs:
   k6_local_test:
