--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: download and extract k6 release binaries
         run: |
-          curl https://github.com/loadimpact/k6/releases/download/v0.34.1/k6-v0.34.1-linux64.tar.gz -L | tar xvz --strip-components 1
+          curl https://github.com/grafana/k6/releases/download/v0.34.1/k6-v0.34.1-linux-amd64.tar.gz -L | tar xvz --strip-components 1
       - name: Install packages
         run: |
           npm install
