--- a/.github/workflows/local.yml
+++ b/.github/workflows/local.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        
+      - name: Docker Build and Start
+        run: |
+          docker build -t hello-app . 
+          docker run -d -p 5000:5000 -it hello-app
 
       - name: download and extract k6 release binaries
         run: |
@@ -21,7 +26,7 @@ jobs:
           npm install
       - name: run tests
         run: |
-          ./k6 run test.js --out json=results.json --no-thresholds
+          ./k6 run local.js --out json=results.json --no-thresholds
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v2
         with:
